update backend initial design

--- a/API-old/appsettings.json
+++ b/API-old/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=sams.db"
+    "SamsContext": "Server=DESKTOP-IOIJQLK;Database=Sams;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -11,3 +11,5 @@
   },
   "AllowedHosts": "*"
 }
+
+
